GNOME Bugzilla – Bug 766732
openjpegenc: Doesn't manage MCT switch for RGB and YUV frames
Last modified: 2016-05-25 08:09:33 UTC
MCT is the J2K transform to convert RGB to YUV. If the frame is already in YUV format, then this transform does not need to be performed. So, when setting up the encoder, MCT should be zero for YUV colour spaces, and it should equal 1 for RGB colour spaces.
In fact, it looks like the encoder simply always uses the default MCT setting, which is zero (no MCT). This is not efficient for RGB colour spaces, as the MCT decorrelates the colour channels, resulting in more efficient encoding.
Fixed in patch to #766732
Hrm? This is bug #766732.
Created attachment 328292 [details] [review] Enable MCT for RGB video Here is the patch that fixes this issue.
Thanks.
commit e76705dbde5d25fbc0fa528bbb89989be00773cb Author: Aaron Boxer <boxerab@gmail.com> Date: Fri May 20 17:28:52 2016 -0400 openjpegenc: enable MCT for RGB video https://bugzilla.gnome.org/show_bug.cgi?id=766732