openjpegenc: enable MCT for RGB video

https://bugzilla.gnome.org/show_bug.cgi?id=766732